js262/test/language/module-code/parse-err-decl-pos-import-object-method.js


/*---
description: Expression cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

({ m() { import v from './decl-pos-import-object-method.js'; } });
